--- a/tiha/tiha-admin/src/main/resources/application.yml
+++ b/tiha/tiha-admin/src/main/resources/application.yml
@@ -33,8 +33,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: shinchuanhealth@gmail.com
-    password: gmffoahiheommtes
+    username: service@zfcloud.cc
+    password: rwrbndukgvyfnjrr
     properties:
       mail:
         smtp:
