--- a/tiha/tiha-admin/src/main/resources/application.yml
+++ b/tiha/tiha-admin/src/main/resources/application.yml
@@ -51,7 +51,7 @@ mybatis-plus:
   
   # 說明:typeAliases-package: 設定別名掃描包,通常用於掃描單表的實體類,但因繼承BaseMapper這很少用
   # 以這個範例項目為例,他應該是這個包下,預設所有實體類的類名(不區分大小寫)為別名
-  # typeAliasesPackage: com.example.entity.pojo
+  typeAliasesPackage: tw.com.tiha.pojo.entity
   # 配置設定
   configuration:
     # 配置輸出日誌-方便查看SQL語句
